# netcdf

./: .gitignore  DEPLOYMENT.md  README.md  chatbot.py  packages.txt  requirements.txt  setup.cfg
.streamlit/: config.toml  secrets_template.toml
config/: .env.template
config/.streamlit/: secrets.toml  secrets.toml.template
scripts/: quick_start.py  run_chatbot.py  run_system.py  setup.py  setup_and_run.bat
src/: __init__.py  api.py  data.py  rag_system.py  sql_generator.py  vector_db.py
