[metadata]
name = argo-netcdf-processor
version = 1.0.0
author = ARGO NetCDF Team
author_email = support@argo-netcdf.com
description = A comprehensive system for processing ARGO oceanographic data with AI-powered querying
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Ayushi40804/netcdf
project_urls =
    Bug Tracker = https://github.com/Ayushi40804/netcdf/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Atmospheric Science
    Topic :: Scientific/Engineering :: Information Analysis

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    streamlit>=1.24.0
    pandas>=1.5.0
    numpy>=1.21.0
    xarray>=2022.6.0
    netcdf4>=1.6.0
    sqlalchemy>=2.0.0
    google-generativeai>=0.3.0
    langchain>=0.0.200
    langchain-google-genai>=0.0.1
    langchain-community>=0.0.20
    chromadb>=0.4.0
    sentence-transformers>=2.2.0
    fastapi>=0.100.0
    uvicorn>=0.22.0
    python-dotenv>=1.0.0
    mysql-connector-python>=8.0.33
    requests>=2.28.0
    ftplib3>=0.4.0

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=7.0.0
    black>=22.0.0
    flake8>=5.0.0
    isort>=5.10.0
    mypy>=0.950
test =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    pytest-mock>=3.10.0

[options.entry_points]
console_scripts =
    argo-setup = scripts.setup:main
    argo-chatbot = scripts.run_chatbot:main
    argo-system = scripts.run_system:main